# thoughtgate

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Justfile  README.md  projectState.md
.devcontainer/: Dockerfile  QUICK_START.md  README.md  SETUP_GUIDE.md  VALIDATION_REPORT.md  devcontainer.json  post-create.sh  validate.sh
.github/: dependabot.yml
benches/: policy_eval.rs  ttfb.rs
docs/: DEVCONTAINER_SUMMARY.md  FUZZING.md  MEMORY_PROFILING.md  REQ-CORE-001_VERIFICATION_COMPLETE.md  architecturalDecisions.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_amber_path.rs  fuzz_cedar_policy.rs  fuzz_config.rs  fuzz_green_path.rs  fuzz_inspector_chain.rs  fuzz_jsonrpc.rs  fuzz_task_lifecycle.rs  peeking_fuzz.rs
k8s/: test-job.yaml
scripts/: collect_metrics.sh  measure_constrained.sh  measure_overhead.sh
specs/: REQ-CFG-001_Configuration.md  REQ-CORE-001_Zero_Copy_Streaming.md  REQ-CORE-002_Buffered_Inspection.md  REQ-CORE-003_MCP_Transport_and_Routing.md  REQ-CORE-004_Error_Handling.md  REQ-CORE-005_Operational_Lifecycle.md  REQ-CORE-006_Inspector_Framework.md  REQ-CORE-007_SEP1686_Protocol_Compliance.md  REQ-GOV-001_Task_Lifecycle.md  REQ-GOV-002_Approval_Execution_Pipeline.md  REQ-GOV-003_Approval_Integration.md  REQ-OBS-001_Performance_Metrics.md  REQ-POL-001_Cedar_Policy_Engine.md  architecture.md
src/: buffered_forwarder.rs  config.rs  error.rs  inspector.rs  lib.rs  logging_layer.rs  main.rs  metrics.rs  policy.rs  proxy_body.rs  proxy_service.rs  timeout.rs
tests/: amber_edge_cases.rs  benchmark.js  edge_cases.rs  integration_k8s.rs  (+3 more)
(+126 files in other folders)
