[package]
name = "thoughtgate-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.thoughtgate]
path = ".."

# Prevent this from interfering with normal builds
[[bin]]
name = "peeking_fuzz"
path = "fuzz_targets/peeking_fuzz.rs"
test = false
doc = false

